--- a/Experiment_232.ipynb
+++ b/Experiment_232.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -74,7 +74,8 @@
     "from scipy import stats\n",
     "from IPython.display import display, Math, Latex\n",
     "# Auslesen von Daten aus einer CSV die auf Github gespeichert wurde\n",
-    "data_1 = np.genfromtxt('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/Aufgabe1.csv',delimiter =\";\")\n",
+    "data_1 = np.genfromtxt('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/Aufgabe1.csv',\n",
+    "                       delimiter =\";\")\n",
     "s_e = data_1[:,1]\n",
     "s_a = data_1[:,0]\n",
     "dm = data_1[:,2]\n",
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -250,7 +251,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "data_2 = np.genfromtxt ('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/Tabelle%202%20(Torr).csv', delimiter=',')\n",
+    "data_2 = np.genfromtxt ('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/Tabelle%202%20(Torr).csv',\n",
+    "                        delimiter=',')\n",
     "\n",
     "p0 = data_2[:3,0:1]\n",
     "p5 = data_2[:3,1:2]\n",
@@ -266,8 +268,10 @@
     "m = 5\n",
     "m_mean = np.mean(data_2[3:,:])\n",
     "\n",
-    "means_5 = np.array([np.mean(p0),np.mean(p5),np.mean(p10),np.mean(p15),np.mean(p20),np.mean(p25),np.mean(p30),np.mean(p35),np.mean(p40),np.mean(p45)])\n",
-    "means_4 = np.array([np.mean(p0),np.mean(p5),np.mean(p10),np.mean(p15),np.mean(p20),np.mean(p25),np.mean(p30),np.mean(p35),np.mean(p40),np.mean(p45),np.mean(p49)])\n",
+    "means_5 = np.array([np.mean(p0),np.mean(p5),np.mean(p10),np.mean(p15),\n",
+    "                    np.mean(p20),np.mean(p25),np.mean(p30),np.mean(p35),np.mean(p40),np.mean(p45)])\n",
+    "means_4 = np.array([np.mean(p0),np.mean(p5),np.mean(p10),np.mean(p15),\n",
+    "                    np.mean(p20),np.mean(p25),np.mean(p30),np.mean(p35),np.mean(p40),np.mean(p45),np.mean(p49)])\n",
     "\n",
     "print(means_4)"
    ]
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +332,6 @@
    ],
    "source": [
     "#Systematische Fehlern\n",
-    "#print(np.mean(p0)*0.0006,np.mean(p5)*0.0006,np.mean(p10)*0.0006,np.mean(p15)*0.0006,np.mean(p20)*0.0006,np.mean(p25)*0.0006,np.mean(p30)*0.0006,np.mean(p35)*0.0006,np.mean(p40)*0.0006,np.mean(p45)*0.0006)\n",
     "sys_p = 5 + means_4*0.0006\n",
     "print(sys_p)"
    ]
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -424,16 +427,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2906fdcdf48>"
+       "<matplotlib.legend.Legend at 0x2796a1f8708>"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -476,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -508,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2906fe64d08>"
+       "<matplotlib.legend.Legend at 0x2796a6b5f88>"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +618,8 @@
     "n_0 = n_l/(2*n_a)*dmp*p_0*t/t_0 + 1\n",
     "display(Math('n_0 =' + str(n_0)))\n",
     "\n",
-    "del_n_0 = ((del_n_l*dmp*p_0*t/(2*n_a*t_0))**2+(n_l*del_dmp*p_0*t/(2*n_a*t_0))**2+(n_l*dmp*p_0*del_t/(2*n_a*t_0))**2+(n_l*del_n_a*dmp*p_0*t/(2*(n_a)**2*t_0)**2)**0.5)\n",
+    "del_n_0 = ((del_n_l*dmp*p_0*t/(2*n_a*t_0))**2+(n_l*del_dmp*p_0*t/(2*n_a*t_0))**2+\n",
+    "           (n_l*dmp*p_0*del_t/(2*n_a*t_0))**2+(n_l*del_n_a*dmp*p_0*t/(2*(n_a)**2*t_0)**2)**0.5)\n",
     "display(Math('\\Delta n_0 =' + str(del_n_0)))"
    ]
   },
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -678,7 +682,7 @@
        "[-0.028, 0.07, -0.077, 0.077]"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -698,7 +702,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "data_3 = np.genfromtxt ('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/F0013CH1.CSV', delimiter=\",\", skip_header=18)\n",
+    "data_3 = np.genfromtxt ('https://raw.githubusercontent.com/Meistermagier/PAP2/master/Experiment232/F0013CH1.CSV',\n",
+    "                        delimiter=\",\", skip_header=18)\n",
     "t = data_3[:,3:4]\n",
     "t = t[:, 0]\n",
     "U = data_3[:,4:5]\n",
@@ -714,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -740,7 +745,7 @@
        "[-0.028, 0.07, -0.077, 0.077]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
