--- a/Experiment 234/Experiment_234.ipynb
+++ b/Experiment 234/Experiment_234.ipynb
@@ -2406,7 +2406,12 @@
    "source": [
     "Diese Werten werden die Linien des Natriumspektrums, die in der Teilen 3.1 und 3.2 der Auswertung bestimmt waren, in der folgende Tabelle zugeordnet.<br>\n",
     "\n",
-    "<center><u>Tabelle idk: Linien der Hauptserie</u></center>"
+    "<center><u>Tabelle idk: Linien der Hauptserie</u></center>\n",
+    "\n",
+    "|m  |erwartete Wellenlänge [nm]|zugeordnete Wellenlänge [nm]|\n",
+    "|---|--------------------------|----------------------------|\n",
+    "|4  |$331.90 \\pm 0.33$         |$\\pm$                       |\n",
+    "|5  |$286.19 \\pm 0.24$         |$\\pm$                       |"
    ]
   },
   {
