--- a/Experiment211/Experiment_211.ipynb
+++ b/Experiment211/Experiment_211.ipynb
@@ -37,6 +37,11 @@
     "\\tag{}\n",
     "\\end{equation}\n",
     "\n",
+    "$\\omega = 2 \\pi f$<br>\n",
+    "$\\Delta \\omega = 2 \\pi (\\Delta f)$<br>\n",
+    "$f = \\frac{1}{T}$<br>\n",
+    "$\\Delta f = \\frac{\\Delta T}{T^2}$\n",
+    "\n",
     "$\\omega_I = \\frac{1}{2}(\\omega_2 + \\omega_1)$<br>\n",
     "$\\Delta \\omega_I = \\frac{1}{2} \\sqrt{(\\Delta \\omega_2)^2 + (\\Delta \\omega_1)^2}$<br>\n",
     "$\\omega_{II} = \\frac{1}{2}(\\omega_2 - \\omega_1)$<br>\n",
@@ -99,7 +104,7 @@
     "<br>\n",
     "<center><u>Tabelle 2: Symmetrische$_{(1)}$ und Asymmetrische$_{(2)}$ Schwingung</u></center>\n",
     "\n",
-    "|Kopplungseinstellung|$\\omega_1$|$\\sigma_1$|$\\omega_2$|$\\sigma_2$|\n",
+    "|Kopplungseinstellung|Frequenz$_1$|$\\sigma_1$|Frequenz$_2$|$\\sigma_2$|\n",
     "|--------------------|-------|-----|-------|-----|\n",
     "|1                   |0.620  |0.007|0.648  |0.006|\n",
     "|2                   |0.620  |0.005|0.685  |0.006|\n",
