--- a/Experiment211/Experiment_211.ipynb
+++ b/Experiment211/Experiment_211.ipynb
@@ -11,14 +11,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Title"
+    "## 1. Messung der Einzelschwingungsfrequenz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Eigenschwingungsfrequenz der beide Pendel ergibt sich durch:"
+    "Da die Werte der Periodendauer stimmen innerhalb ihrer Fehler überein (wie schon in der Messprotokoll bestimmt), nehmen wir an, dass die Eigenfrequenzen beider Pendeln gleiche sind. Daher nutzen wir der Mittelwert der Periodendauer um diese zu bestimmen.\n",
+    "\n",
+    "Die Eigenschwingungsfrequenz jeder Pendel ergibt sich durch $\\omega = 2 \\pi f$, wobei $f = \\frac{1}{T}$. Damit ergibt sich: <br>\n",
+    "\\begin{equation} \\omega = \\frac{2 \\pi}{T} \\tag{} \\end{equation} <br>\n",
+    "Ihre Fehler beträgt nach dem Gaußschen Fehlerfortpflanzung: <br>\n",
+    "\\begin{equation} \\Delta \\omega = \\frac{2 \\pi (\\Delta T)}{T^2} \\tag{} \\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.890517218067855\n",
+      "0.04817977979031399\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "\n",
+    "T = np.mean([1.62, 1.61])\n",
+    "#dT1 Standardabweichung !!\n",
+    "dT1 = T.std()\n",
+    "dT2 = 0.02\n",
+    "dT = (dT1**2 + dT2**2)**0.5\n",
+    "\n",
+    "print(2*np.pi/T)\n",
+    "print(2*np.pi*dT/(T)**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Damit ergibt sich für die Einzelschwingungsfrequenz:\n",
+    "> $\\omega = (3.89 \\pm 0.05) \\space s^{-1}$"
    ]
   },
   {
@@ -113,7 +154,7 @@
     "<br>\n",
     "<center><u>Tabelle 3: Schwebung</u></center>\n",
     "\n",
-    "|Kopplungseinstellung|$\\omega_1$|$\\sigma_1$|$\\omega_2$|$\\sigma_2$|\n",
+    "|Kopplungseinstellung|Frequenz$_1$|$\\sigma_1$|Frequenz$_2$|$\\sigma_2$|\n",
     "|--------------------|-------|-----|-------|-----|\n",
     "|1                   |0.619  |0.003|0.648  |0.003|\n",
     "|2                   |0.618  |0.007|0.685  |0.007|\n",
